--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "chatchat_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "firebase-admin": "^12.6.0",
     "mongoose": "^8.18.1",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
